# mpl-token-metadata

./: .gitignore  .gitmodules  CLAUDE.md  Duff mem  LICENSE  README.md  codama.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: .env  CODEOWNERS  SECURITY.md  file-filters.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-programs.yml  build-rust-client.yml  build-sdk.yml  code-formatting.yml  create-proposal.yml  deploy-js-client.yml  deploy-js-kit-client.yml  deploy-js.yml  deploy-program.yml  deploy-rust-client.yml  install-themis.yml  integration-test.yml  js-sdk.yml  main.yml  publish-crate.yml  test-js-client.yml  test-js.yml  test-programs.yml  test-rust-client.yml  test-sdk.yml  version-program.yml
clients/js/: .eslintrc.js  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  typedoc.json
clients/js-codama/: README.md  SETUP.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
clients/js-kit/: .gitignore  README.md  SETUP.md  package-lock.json  package.json  pnpm-lock.yaml
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs  traits.rs  utils.rs
clients/rust/src/hooked/: holder_delegate_role_seed.rs  metadata_delegate_role_seed.rs  mod.rs
clients/rust/tests/: create.rs  lock.rs  mint.rs
clients/rust/tests/setup/: digital_asset.rs  dirty_clone.rs  mod.rs  token_manager.rs
configs/: codama.cjs  codama.ts  kinobi.cjs  public-sync.sh  shank.cjs  validator.cjs  validator.devnet.cjs
examples/rust/get_metadata/: Cargo.toml
examples/rust/get_metadata/src/: main.rs
idls/: mpl_system_extras.json  mpl_token_auth_rules.json  mpl_token_extras.json  mpl_token_metadata.json  spl_associated_token.json  spl_memo.json  spl_system.json  spl_token.json  token_metadata.json
infra/: kinobi.cjs  shank.cjs  validator.cjs  validator.mainnet.cjs
programs/: token-auth-rules  token-metadata
programs/token-extras/: Cargo.toml
programs/token-extras/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
programs/token-extras/tests/: create_token_if_missing.rs  utils.rs
programs/token-metadata/program/: Cargo.toml  ProgrammableNFTGuide.md
programs/token-metadata/program/src/: entrypoint.rs  error.rs  lib.rs  pda.rs
programs/token-metadata/program/src/assertions/: collection.rs  edition.rs  metadata.rs  misc.rs  programmable.rs  uses.rs
programs/token-metadata/program/src/instruction/: bubblegum.rs  burn.rs  collection.rs  delegate.rs  edition.rs  escrow.rs  fee.rs  freeze.rs  metadata.rs  mod.rs  scratchpad.rs  state.rs  uses.rs  verification.rs
programs/token-metadata/program/src/processor/: mod.rs
programs/token-metadata/program/src/processor/bubblegum/: bubblegum_set_collection_size.rs
programs/token-metadata/program/src/processor/burn/: burn.rs  burn_edition_nft.rs  burn_nft.rs  fungible.rs  mod.rs  nonfungible.rs  nonfungible_edition.rs
programs/token-metadata/program/src/processor/close/: mod.rs
programs/token-metadata/program/src/processor/collection/: approve_collection_authority.rs  revoke_collection_authority.rs  set_and_verify_collection.rs  set_and_verify_sized_collection_item.rs  set_collection_size.rs  unverify_collection.rs  unverify_sized_collection_item.rs  verify_collection.rs  verify_sized_collection_item.rs
programs/token-metadata/program/src/processor/delegate/: delegate.rs  revoke.rs
programs/token-metadata/program/src/processor/edition/: convert_master_edition_v1_to_v2.rs  create_master_edition_v3.rs  mint_new_edition_from_master_edition_via_token.rs
programs/token-metadata/program/src/processor/engrave/: mod.rs
programs/token-metadata/program/src/processor/escrow/: close_escrow_account.rs  create_escrow_account.rs  pda.rs  transfer_out.rs
programs/token-metadata/program/src/processor/fee/: mod.rs
programs/token-metadata/program/src/processor/freeze/: freeze_delegated_account.rs  thaw_delegated_account.rs
programs/token-metadata/program/src/processor/metadata/: create.rs  create_medatata_accounts_v3.rs  mint.rs  print.rs  puff_metadata.rs  remove_creator_verification.rs  set_token_standard.rs  sign_metadata.rs  transfer.rs  update.rs  update_metadata_account_v2.rs  update_primary_sale_happened_via_token.rs
programs/token-metadata/program/src/processor/resize/: mod.rs
programs/token-metadata/program/src/processor/state/: lock.rs  mod.rs  unlock.rs
programs/token-metadata/program/src/processor/uses/: approve_use_authority.rs  revoke_use_authority.rs  utilize.rs
programs/token-metadata/program/src/processor/verification/: collection.rs  creator.rs  verify.rs
programs/token-metadata/program/src/state/: asset_data.rs  collection.rs  creator.rs  delegate.rs  edition.rs  edition_marker.rs  edition_marker_v2.rs  escrow.rs  fee.rs  master_edition.rs  metadata.rs  mod.rs  programmable.rs  reservation.rs  token_auth_payload.rs  uses.rs
programs/token-metadata/program/src/utils/: collection.rs  compression.rs  fee.rs  master_edition.rs  metadata.rs  mod.rs  programmable_asset.rs  token.rs
programs/token-metadata/program/tests/: approve_use_authority.rs  bump_seed_migration.rs  burn.rs  burn_edition_nft.rs  burn_nft.rs  collection_migrations.rs  collection_sizes.rs  create.rs  create_master_edition.rs  create_metadata_account.rs  delegate.rs  deprecated_ixes.rs  escrow.rs  fees.rs  freeze_authority.rs  freeze_delegated_account.rs  lock.rs  mint.rs  mint_new_edition_from_master_edition_via_token.rs  print.rs  process_legacy_instruction.rs  resize.rs  revoke.rs  revoke_use_authority.rs  seralization.rs  set_collection_size.rs  set_token_standard.rs  sign_metadata.rs  transfer.rs  unlock.rs  unverify.rs  update.rs  update_metadata_account_v2.rs  update_primary_sale_happened_via_token.rs  update_with_old_lib.rs  uses.rs  verify.rs  verify_collection.rs  verify_sized_collection_item.rs
programs/token-metadata/program/tests/utils/: collection.rs  digital_asset.rs  edition_marker.rs  master_edition_v2.rs  metadata.rs  mod.rs  programmable.rs  rooster_manager.rs
trees/: codama.json
(+312 files in other folders)
