[package]
authors = ["Metaplex Developers <dev@metaplex.com>"]
description = "Metaplex Token Metadata SDK"
edition = "2021"
license-file = "../../LICENSE"
name = "mpl-token-metadata"
readme = "README.md"
repository = "https://github.com/metaplex-foundation/mpl-token-metadata"
version = "5.1.2-alpha.1"

[lib]
crate-type = ["cdylib", "lib"]

[features]
serde = ["dep:serde", "dep:serde_with"]
test-sbf = []

[dependencies]
borsh = "1.0"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "3.0"
solana-program-error = "3.0"
thiserror = "^1.0"
kaigan = "0.3.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "3.0"
solana-sdk = "3.0"
spl-associated-token-account = { version = "8.0", features = [
  "no-entrypoint",
] }
spl-token = { version = "9.0", features = ["no-entrypoint"] }
spl-token-2022-interface = { version = "2.0.0" }
solana-system-interface = "2.0.0"
test-case = "3.1.0"
solana-pubkey = "3.0"
