[package]
name = "mpl-token-extras"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
solana-program = "=1.13.3"
shank = "0.0.12"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.13.3"
solana-sdk = "=1.13.3"
solana-validator = "=1.13.3"
solana-logger = "=1.13.3"

[lib]
crate-type = ["cdylib", "lib"]
