[package]
name = "get_metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread","full"] }
mpl-token-metadata = "4.1.2"
solana-client = "1.17.14"
solana-sdk = "1.17.14"