[package]
name = "token_metadata"
version = "1.14.0"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license-file = "../../../LICENSE"
edition = "2021"
readme = "README.md"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde", "serde_with"]

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.3"
mpl-token-auth-rules = { version = "=1.4.3-beta.1", features = ["no-entrypoint"] }
mpl-token-metadata-context-derive = { version = "0.3.0", path = "../macro" }
mpl-utils = { version = "0.3.2", features = ["spl-token"] }
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.149", optional = true }
serde_with = { version = "1.14.0", optional = true }
shank = { version = "0.3.0" }
solana-program = ">= 1.14.13, < 1.17"
spl-token-2022 = "0.8.0"
spl-associated-token-account = { version = ">= 1.1.3, < 3.0", features = ["no-entrypoint"] }
thiserror = "1.0"
mpl-engraver = "0.2.2"

[dev-dependencies]
async-trait = "0.1.64"
rmp-serde = "1.1.1"
rooster = { git = "https://github.com/metaplex-foundation/rooster", features = ["no-entrypoint"] }
serde = { version = "1.0.147", features = ["derive"] }
solana-program-test = ">= 1.14.13, < 1.17"
solana-sdk = ">= 1.14.13, < 1.17"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
test-case = "3.1.0"

[lib]
crate-type = ["cdylib", "lib"]
